[package]
name = "nss_warlock"
version = "0.2.0"
edition = "2021"
authors = ["Tristan Blackwell"]
description = "NSS module for dynamic VM user resolution in Warlock infrastructure"
license = "MIT"
repository = "https://github.com/TristanBlackwell/warlock-nss"

[lib]
name = "nss_warlock"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
lazy_static = "1.4"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
